# plcc-ng

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  REUSE.toml  mkdocs-dev.yml  mkdocs.yml  pyproject.toml  spec  versions.json
.claude/: settings.json
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  docs.yml  pypi.yaml  release.yaml  release.yml
0.64/: 404.html  index.html  sitemap.xml
0.64/acknowledgments/: index.html
0.64/changelog/: index.html
0.64/cli/: index.html
0.64/installation/: index.html
0.64/instructor-guide/: index.html
0.64/language-guide/: index.html
0.64/migration/: index.html
0.64/quick-start/: index.html
0.64/search/: search_index.json
0.65/: 404.html  index.html  sitemap.xml
0.65/acknowledgments/: index.html
0.65/changelog/: index.html
0.65/cli/: index.html
0.65/installation/: index.html
0.65/instructor-guide/: index.html
0.65/language-guide/: index.html
0.65/migration/: index.html
0.65/quick-start/: index.html
0.65/search/: search_index.json
0.66/: 404.html  index.html  sitemap.xml
0.66/acknowledgments/: index.html
0.66/changelog/: index.html
0.66/cli/: index.html
0.66/installation/: index.html
0.66/instructor-guide/: index.html
0.66/language-guide/: index.html
0.66/migration/: index.html
0.66/quick-start/: index.html
0.66/search/: search_index.json
0.67/: 404.html  index.html  sitemap.xml
0.67/acknowledgments/: index.html
0.67/changelog/: index.html
0.67/cli/: index.html
0.67/installation/: index.html
0.67/instructor-guide/: index.html
0.67/language-guide/: index.html
0.67/migration/: index.html
0.67/quick-start/: index.html
0.67/search/: search_index.json
1.0/: 404.html  index.html  sitemap.xml
1.0/acknowledgments/: index.html
1.0/cli/: index.html
1.0/installation/: index.html
1.0/language-guide/: index.html
1.0/migration/: index.html
1.0/quick-start/: index.html
1.0/search/: search_index.json
1.0/whats-new/: index.html
dev/: 404.html  index.html  sitemap.xml
dev-docs/: 404.html  architecture.md  changelog.md  code-of-conduct.md  contributing.md  index.html  index.md  issue-conventions.md  release-sop.md  roadmap.md  security-notes.md  sitemap.xml  v1.0-criteria.md
dev-docs/architecture/: index.html
dev-docs/changelog/: index.html
dev-docs/code-of-conduct/: index.html
dev-docs/contributing/: index.html
dev-docs/diagrams/: cli-command-dependencies.puml
dev-docs/issue-conventions/: index.html
dev-docs/issues/: 073-docs-java-jdk-prerequisite.md  076-docs-home-install-redundancy.md  078-docs-content-license.md  079-docs-diagrams.md  080-docs-tabbed-code-blocks.md  084-no-banner-default.md  086-token-str-method.md  087-divider-language-first.md  088-lexical-rule-keyword-required.md  090-separator-language-case-sensitive.md  091-single-semantic-section.md  092-language-as-first-line-of-semantics.md  093-incremental-parsing-repl.md  094-docs-status-after-initial-branch.md  095-semantic-section-redesign.md  098-rep-ctrl-d-non-empty-line.md  099-docs-link-to-source.md  100-docs-cli-command-classification.md  104-java-class-fragment-missing.md  105-haskell-fragment-concrete-class-name-silently-ignored.md  111-mermaid-extension-redesign.md  112-first-major-release.md  114-lexical-ebnf-diagram.md  115-scan-trace-vs-verbose-inconsistency.md  116-docopts-cryptic-error-message.md  120-parser-table-eof-message.md  121-rep-python-syntax-error-continues.md  125-rename-build-dir-to-plcc-ng.md  126-docs-diagram-syntax-command-page.md  128-docs-help-options-output-diagnostics.md  135-release-pypi-publish-skip-existing.md  136-release-changelog-vcs-release-divergence.md  137-release-smoke-test-emitter-coverage.md  138-release-pypi-environment-protection-check.md  142-verify-pypi-simple-index-race.md  147-capitalization-of-section-headings.md  149-fix-stale-issues-done-links.md  150-close-script-auto-fix-links.md  152-test-cache-content-hash-invalidation.md  154-update-python-semantic-release.md  (+14 more)
dev-docs/plans/: 2026-04-13-phase-1-walking-skeleton.md  2026-04-17-error-handling-1-docs-opus.md  2026-04-17-error-handling-2-code-sonnet.md  2026-04-17-error-handling-3-orchestrators-opus.md  2026-04-25-phase-2-part-2-model-diagram.md  2026-04-29-phase-3-java-emitter.md  2026-05-02-phase-4-packaging-and-release.md  2026-05-06-issue-tracker.md  2026-05-06-plcc-scan-issues-plan.md  2026-05-07-scan-tokens-file-provenance.md  2026-05-07-verbosity-short-flag.md  2026-05-08-scan-verbosity-redesign.md  2026-05-11-unified-build.md  2026-05-12-source-runner.md  2026-05-14-interactive-ctrl-d-blank-line.md  2026-05-14-interactive-shell-ux.md  2026-05-15-plcc-trees-error-handling.md  2026-05-17-interactive-session.md  2026-05-18-fix-026-027.md  2026-05-20-011-parse-verbose-child-events.md  2026-05-20-issues-017-023-029.md  2026-05-23-033-rep-submit-on-eof.md  2026-05-23-ctrl-d-handling.md  2026-05-23-fix-032-scanner-zero-length-skip.md  2026-05-24-035-diagram-redesign.md  2026-05-24-first-error-wins.md  2026-05-24-language-case-normalization.md  2026-05-25-diagram-decouple-from-make.md  2026-05-25-plantuml-pip-default.md  2026-05-25-semantics-comments-empty-files.md  2026-05-26-037-spec-parser-syntax-error-messages.md  2026-05-26-043-044-spec-error-improvements.md  2026-05-27-ll1-conflict-messages.md  2026-05-28-039-level-2-errors-to-stdout-plan.md  2026-05-29-046-sticky-grammar.md  2026-05-30-050-rename-grammar-file-to-grammar.md  2026-06-01-remove-pplc-pprc-bracket-syntax.md  2026-06-01-require-colon-rhs-alt-name.md  2026-06-04-062-tokens-cli-unclosed-block-error.md  2026-06-04-block-lexical-rule.md  (+54 more)
dev-docs/release-sop/: index.html
dev-docs/reviews/: 2026-04-13-phase-1-plan-review.md
dev-docs/roadmap/: index.html
dev-docs/search/: search_index.json
dev-docs/v1.0-criteria/: index.html
docs/: acknowledgments.md  changelog.md  getting-started.md  index.md  installation.md  migration.md  quick-start.md  whats-new.md
plcc-ng/: .spec-hash  ll1.json  spec.json
(+2667 files in other folders)
