[project]
name = "plcc"
dynamic = ["version"]
description = "Programming Languages Compiler Compiler"
authors = [
    {name = "PLCC Community", email = "https://discord.gg/EVtNSxS9E2"},
]
dependencies = [
    "docopt-ng>=0.9.0"
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[tool.pdm.build]
package-dir = "src"

[tool.pdm.version]
source = "scm"
fallback_version = "0.0.0"


[project.scripts]
plcc-spec = "plcc.spec.plcc_spec_cli:main"
plcc-tokens = "plcc.tokens.tokens_cli:main"
plcc-tree = "plcc.tree.tree_cli:main"
plcc-model = "plcc.model.model_cli:main"
plcc-plantuml-emit = "plcc.lang.ext.plantuml.emit:main"
plcc-lang-emit = "plcc.lang.emit:main"
plcc-lang-build = "plcc.lang.build:main"
plcc-lang-list = "plcc.lang.list:main"
plcc-make = "plcc.cmd.make:main"
plcc-scan = "plcc.cmd.scan:main"
plcc-parse = "plcc.cmd.parse:main"
plcc-rep = "plcc.cmd.rep:main"
plcc-ll1 = "plcc.ll1.ll1_cli:main"
plcc-parser-table = "plcc.parser.table_cli:main"
plcc-parser-list = "plcc.parser.list_cli:main"
plcc-python-emit = "plcc.lang.ext.python.emit:main"
plcc-lang-run = "plcc.lang.run:main"
plcc-python-run = "plcc.lang.ext.python.run:main"
plcc-java-emit  = "plcc.lang.ext.java.emit:main"
plcc-java-build = "plcc.lang.ext.java.build:main"
plcc-java-run   = "plcc.lang.ext.java.run:main"

[tool.pdm.scripts]
test = "pytest -qq -rfEsxXP --cov=plcc --cov-branch --cov-report term-missing:skip-covered"
ctest = "pytest-watch --runner \"bin/test/units.bash\""

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pyfakefs>=5.4.1",
    "pytest-cov>=5.0.0",
    "pytest-watch>=4.2.0",
    "check-jsonschema>=0.29.0",
]
