[project]
name = "plcc-ng"
dynamic = ["version"]
description = "Programming Languages Compiler Compiler for teaching and learning programming language concepts"
authors = [
    {name = "PLCC Community", email = "https://discord.gg/EVtNSxS9E2"},
]
dependencies = [
    "docopt-ng>=0.9.0",
    "jinja2>=3.1.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
keywords = ["compiler", "parser", "education", "plcc", "teaching", "programming-languages"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Education",
]


[project.urls]
Documentation = "https://ourplcc.github.io/plcc-ng/"
Homepage = "https://github.com/ourPLCC/plcc-ng"
Repository = "https://github.com/ourPLCC/plcc-ng"
Issues = "https://github.com/ourPLCC/plcc-ng/issues"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[tool.pdm.build]
package-dir = "src"

[tool.pdm.version]
source = "scm"
fallback_version = "0.0.0"


[project.scripts]
plcc-spec = "plcc.spec.plcc_spec_cli:main"
plcc-validate-semantic  = "plcc.spec.semantics.plcc_validate_semantic_cli:main"
plcc-validate-lexical   = "plcc.spec.lexical.plcc_validate_lexical_cli:main"
plcc-validate-syntactic = "plcc.spec.syntax.plcc_validate_syntactic_cli:main"
plcc-tokens = "plcc.tokens.tokens_cli:main"
plcc-trees = "plcc.tree.tree_cli:main"
plcc-model = "plcc.model.model_cli:main"
plcc-lang-emit = "plcc.lang.emit:main"
plcc-diagram = "plcc.cmd.diagram:main"
plcc-diagram-class = "plcc.diagram.class_diagram.diagram:main"
plcc-diagram-class-plantuml-emit = "plcc.diagram.class_diagram.plantuml.emit:main"
plcc-diagram-syntax               = "plcc.diagram.syntax_diagram.diagram:main"
plcc-diagram-syntax-plantuml-emit = "plcc.diagram.syntax_diagram.plantuml.emit:main"
plcc-diagram-build = "plcc.diagram.build:main"
plcc-diagram-emit = "plcc.diagram.emit:main"
plcc-diagram-run = "plcc.diagram.run:main"
plcc-diagram-plantuml-build = "plcc.diagram.plantuml.build:main"
plcc-diagram-plantuml-run   = "plcc.diagram.plantuml.run:main"
plcc-lang-build = "plcc.lang.build:main"
plcc-lang-list = "plcc.lang.list:main"
plcc-diagram-list = "plcc.diagram.list:main"
plcc-make = "plcc.cmd.make:main"
plcc-scan = "plcc.cmd.scan:main"
plcc-parse = "plcc.cmd.parse:main"
plcc-rep = "plcc.cmd.rep:main"
plcc-ll1 = "plcc.ll1.ll1_cli:main"
plcc-parser-table = "plcc.parser.table_cli:main"
plcc-parser-list = "plcc.parser.list_cli:main"
plcc-python-emit = "plcc.lang.ext.python.emit:main"
plcc-lang-run = "plcc.lang.run:main"
plcc-python-run = "plcc.lang.ext.python.run:main"
plcc-java-emit  = "plcc.lang.ext.java.emit:main"
plcc-java-build = "plcc.lang.ext.java.build:main"
plcc-java-run   = "plcc.lang.ext.java.run:main"
plcc-javascript-emit = "plcc.lang.ext.javascript.emit:main"
plcc-javascript-run  = "plcc.lang.ext.javascript.run:main"
plcc-haskell-emit  = "plcc.lang.ext.haskell.emit:main"
plcc-haskell-build = "plcc.lang.ext.haskell.build:main"
plcc-haskell-run   = "plcc.lang.ext.haskell.run:main"
plcc-version = "plcc.version:main"

[project.optional-dependencies]
diagram = []

[tool.pdm.scripts]
test = "pytest -qq -rfEsxXP --cov=plcc --cov-branch --cov-report term-missing:skip-covered"
ctest = "pytest-watch --runner \"bin/test/units.bash\""

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pyfakefs>=5.4.1",
    "pytest-cov>=5.0.0",
    "pytest-watch>=4.2.0",
    "check-jsonschema>=0.29.0",
    "python-semantic-release>=9.0.0,<10.0.0",
    "twine>=5.0.0",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mike>=2.1",
    "mkdocs-include-markdown-plugin>=6.0",
    "mkdocs-kroki-plugin>=0.8",
]

[tool.semantic_release]
tag_format = "v{version}"
version_variables = []
version_toml = []
major_on_zero = true
changelog_file = "CHANGELOG.md"
commit_message = "chore(release): v{version} [skip ci]"
